--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,5 +54,14 @@
             "newlines-between": "always"
           }
         ]
+      },
+      "settings": {
+        "version": "detect",
+        "import/resolver": {
+          "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"],
+            "moduleDirectory": ["node_modules", "src/"]
+          }
+        }
       }
 }
