--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint --debug src/",
+    "lint:fix": "eslint --debug src/ --fix",
+    "format": "prettier --write src/",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -37,12 +40,17 @@
       "last 1 safari version"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.ts": "npx tsc --noEmit",
     "*.{js,jsx,ts,tsx}": "npx eslint",
     "*.{js,jsx,ts,tsx,html,css}": "npx prettier --check"
   },
-  
+
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
