--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,15 @@
     ],
     "parser": "@babel/eslint-parser",
     "parserOptions": {
+        "babelOptions": {
+            "parserOpts": {
+              "plugins": ["jsx"]
+            }
+          },
         "ecmaFeatures": { "jsx": true },
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "requireConfigFile": false
     },
     "plugins": ["react", "prettier", "import", "jsx-a11y"],
     "rules": {
