--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+    "lint-staged": {
+"src/**/*.{ts,tsx,js,jsx}":[
+"npm run lint:fix",
+"npm run format"
+],
+"src/**/*.{html,css,scss}": "npm run format"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --debug src/",
-    "lint:fix": "eslint --debug src/ --fix",
-    "format": "prettier --write src/",
+    "lint": "eslint src/**/*.{ts,tsx,js,jsx}",
+    "lint:fix": "eslint src/**/*.{ts,tsx,js,jsx} --fix",
+    "format": "prettier --write src/**/*.{ts,tsx,js,jsx}",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -45,11 +52,7 @@
       "pre-commit": "lint-staged"
     }
   },
-  "lint-staged": {
-    "*.ts": "npx tsc --noEmit",
-    "*.{js,jsx,ts,tsx}": "npx eslint",
-    "*.{js,jsx,ts,tsx,html,css}": "npx prettier --check"
-  },
+
 
   "devDependencies": {
     "@babel/core": "^7.22.5",
