--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,16 +27,22 @@
     },
     "plugins": ["react", "prettier", "import", "jsx-a11y"],
     "rules": {
-        /* "indent": ["error", 2],
+        "indent": ["error", 2],
         "prettier/prettier": "error",
         "linebreak-style": [0, "unix"],
         "quotes": ["error", "single"],
-        "semi": ["error", "never"],
+        "semi": ["off"],
         "react/react-in-jsx-scope": "off",
         "react/prop-types": 0,
         "import/no-unresolved": [2, { "caseSensitive": false }],
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], */
-        "react/state-in-constructor": 0,
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "no-param-reassign": ["error", { "props": false }],
+        "no-shadow":"off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-noninteractive-element-interactions":"off",
+        "jsx-a11y/control-has-associated-label": 0,
+        "jsx-a11y/label-has-associated-control": 0,
+/*         "react/state-in-constructor": 0,
         "jsx-a11y/label-has-associated-control": 0,
         "react/react-in-jsx-scope": "off",
         "react/prop-types": 0,
@@ -45,7 +51,7 @@
         "prettier/prettier": "error",
         "linebreak-style": [0, "unix"],
         "quotes": ["error", "single"],
-        "import/no-unresolved": [2, { "caseSensitive": false }],
+        "import/no-unresolved": [2, { "caseSensitive": false }], */
         "import/order": [
           2,
           {
