точно last commit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
         "jsx-a11y/no-noninteractive-element-interactions":"off",
         "jsx-a11y/control-has-associated-label": 0,
         "jsx-a11y/label-has-associated-control": 0,
+        "jsx-a11y/no-autofocus": "off",
 /*         "react/state-in-constructor": 0,
         "jsx-a11y/label-has-associated-control": 0,
         "react/react-in-jsx-scope": "off",
